# applenotes-organization

./: EXAMPLES.md  INSTALLATION.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml  setup.sh  test_fastmcp.py  test_server.py
.github/: copilot-instructions.md
.github/workflows/: tests.yml
applenotes_organization/: __init__.py  server.py
applenotes_organization/tools/: __init__.py  account_operations.py  applescript_runner.py  folder_operations.py  note_operations.py  vector_search.py
applenotes_organization/utils/: __init__.py  error_handler.py
tests/: test_operations.py
